test(exception): 移除异常类测试中的冗余构造函数测试
- 注释掉构造函数 code + Throwable 的测试方法
- 将 convertList 空列表测试中的 List.of() 替换为 Arrays.asList()